syntax = "proto3";

package yacht.config.proto;


message BackboneConfig {
    string name = 1;
    int32 input_features_dim = 2;
}