syntax = "proto3";

package yacht.config.proto;

import "yacht/config/proto/feature_extractor.proto";
import "yacht/config/proto/net_architecture.proto";


message PolicyConfig {
    string name = 1;
    string activation_fn = 2;
    FeatureExtractorConfig feature_extractor = 3;
    NetArchitectureConfig net_arch = 4;
}